reactive with gui, use Report class